<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:isScrollContainer="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View style="@style/Divider" />

        <Button
            android:id="@+id/btn_translate_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_translator"
            android:textAllCaps="false" />

        <View style="@style/Divider" />


        <Button
            android:id="@+id/btn_images_slider_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_show_images_slider"
            android:textAllCaps="false" />

        <View style="@style/Divider" />

        <Button
            android:id="@+id/btn_Spanny"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_spanny"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_notification_badge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_btn_notification_badge"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_drawer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_btn_drawer_activity"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_material_drawer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_btn_material_drawer_activity"
            android:textAllCaps="false" />


        <Button
            android:id="@+id/btn_youtube_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_btn_youtube_player_activity"
            android:textAllCaps="false" />


        <Button
            android:id="@+id/btn_many_image_views"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_btn_many_imageviews"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_custom_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_btn_custom_toolbar"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_firebase_ui_auth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_btn_auth_with_firebase_ui"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_settings_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_btn_settings_activity"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_sqlite_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_btn_sqlite_activity"
            android:textAllCaps="false" />


        <Button
            android:id="@+id/btn_recyclerview_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_btn_recyclerview_activity"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_content_resolver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black_alpha_60"
            android:text="@string/title_btn_content_resolver"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_content_provider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black_alpha_60"
            android:text="@string/title_btn_content_provider"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_async_task_loader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black_alpha_60"
            android:text="@string/title_btn_async_task_loader"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_maps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_btn_maps"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black_alpha_60"
            android:text="@string/title_btn_room"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_background_services"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black_alpha_60"
            android:text="@string/title_background_services"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_notification"
            android:textAllCaps="false" />


        <Button
            android:id="@+id/btn_jobs_scheduler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black_alpha_60"
            android:text="@string/title_btn_jobs_scheduler"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_broadcast_receiver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black_alpha_60"
            android:text="@string/title_btn_broadcast_receiver"
            android:textAllCaps="false" />


        <Button
            android:id="@+id/btn_bottom_navigation_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black_alpha_60"
            android:text="@string/title_btn_bottom_navigation_view"
            android:textAllCaps="false" />


        <Button
            android:id="@+id/btn_data_binding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_btn_data_binding"
            android:textAllCaps="false" />


        <Button
            android:id="@+id/btn_Icepick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black_alpha_60"

            android:text="@string/title_btn_Icepick"
            android:textAllCaps="false" />


        <Button
            android:id="@+id/btn_runtime_permissions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black_alpha_60"
            android:text="@string/title_btn_runtime_permissions"
            android:textAllCaps="false" />
        <Button
            android:id="@+id/btn_schematic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black_alpha_60"
            android:text="@string/title_btn_schematic"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_date_display_logic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black_alpha_60"
            android:text="@string/title_btn_date_display_logic"
            android:textAllCaps="false" />
        <Button
            android:id="@+id/btn_exo_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black_alpha_60"
            android:text="@string/title_btn_exo_player"
            android:textAllCaps="false" />


    </LinearLayout>
</ScrollView>