<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/txt_translate_from_title"
        android:layout_width="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        android:text="@string/title_translate_from" />

    <Spinner
        android:id="@+id/spinner_original_lang"
        android:layout_width="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_alignTop="@+id/txt_translate_from_title"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/txt_translate_from_title"
        android:paddingTop="4dp" />

    <TextView
        android:id="@+id/text_translate_to_title"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_original_lang"
        android:text="@string/title_translate_to" />

    <Spinner
        android:id="@+id/spinner_destination_language"
        android:layout_alignStart="@id/spinner_original_lang"
        android:layout_alignTop="@+id/text_translate_to_title"
        android:layout_width="wrap_content"
        android:layout_below="@+id/txt_translate_from_title"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_below="@+id/spinner_destination_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/txt_orginal_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_enter_text"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/txt_translated_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_translation" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_translate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_translate"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>
